Add content to robot page and content

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Contact ・ Robot Parts Co.</title>
+  <meta name="discription" content="Every part or piexe a destructive robot needs: gears, rotors, mainpulators, sensors, power cells and more.">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <meta name="geo.placename" content="Ottawa">
   <meta name="discription" content="Send us digital beams or stop by the wearhouse to order a part that we're missing">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="geo.placename" content="Ottawa">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Robot Parts Co. ・ Contact">
+  <meta property="og:url" content="https://robotparts.co/">
+  <meta property="og:image" content="https://robotparts.com/images/socail.jpg">
+  <meta property="og:site_name" content="Robot Parts Co.">
+  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
+  <meta property="og:locale" content="en_Ca">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@robotpartsco">
 </head>
 <body>
 
@@ -37,6 +51,20 @@
   <footer>
     <p>© 2027 Robot Parts Co.</p>
   </footer>
-
+  <script type="application/ld+json">
+    {
+      "@contexr": "https://schema.org",
+      "@type": "Organization",
+      "name": "Robot Parts Co."
+      "email": "parts@robotparts.co",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1234 Robot Lane",
+        "addressLocality": "Robot Mega City 1",
+        "addressRegion": "RoboStateB",
+        "postalCode": "11001010100101001"
+      }
+    }
+  </script>
 </body>
 </html>
