--- a/robot-parts.html
+++ b/robot-parts.html
@@ -6,6 +6,16 @@
   <meta name="discription" content="Every part or piexe a destructive robot needs: gears, rotors, mainpulators, sensors, power cells and more.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="geo.placename" content="Ottawa">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Robot Parts Co. ・ Robot parts">
+  <meta property="og:url" content="https://robotparts.co/">
+  <meta property="og:image" content="https://robotparts.com/images/socail.jpg">
+  <meta property="og:site_name" content="Robot Parts Co.">
+  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
+  <meta property="og:locale" content="en_Ca">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@robotpartsco">
 </head>
 <body>
 
