Add meta data for twitter and others

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
   <meta name="discription" content="Every part or piexe a destructive robot needs: gears, rotors, mainpulators, sensors, power cells and more.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <meta name="ICBM" content="45.41117,-75.69812">
+  <meta name="geo.position" content="45.41117,-75.69812">
+  <meta name="geo.region" content="ca-on">
+  <meta name="geo.placename" content="Ottawa">
   <meta name="geo.placename" content="Ottawa">
   <meta name="discription" content="Send us digital beams or stop by the wearhouse to order a part that we're missing">
   <meta name="viewport" content="width=device-width,initial-scale=1">
