Fix the code for the hmtl files

--- a/robot-parts.html
+++ b/robot-parts.html
@@ -2,26 +2,23 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Robot Parts ・ Robot Parts Co. </title>
-  <meta name="discription" content="Every part or piexe a destructive robot needs: gears, rotors, mainpulators, sensors, power cells and more.">
+  <title>Robot Parts · Robot Parts Co.</title>
+  <meta name="description" content="Every part or piece a destructive robot needs: gears, rotors, manipulators, sensors, power cells and more.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-  <meta name="ICBM" content="45.41117,-75.69812">
-  <meta name="geo.position" content="45.41117,-75.69812">
+  <meta name="ICBM" content="45.41117;-75.69812">
+  <meta name="geo.position" content="45.41117;-75.69812">
   <meta name="geo.region" content="ca-on">
   <meta name="geo.placename" content="Ottawa">
-  <meta name="geo.placename" content="Ottawa">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Robot Parts Co. ・ Robot parts">
-  <meta property="og:url" content="https://robotparts.co/">
-  <meta property="og:image" content="https://robotparts.com/images/socail.jpg">
+  <meta property="og:title" content="Every part for robots that'll conquer the world">
+  <meta property="og:url" content="https://robotparts.co/robot-parts/">
+  <meta property="og:image" content="https://robotparts.co/images/social.jpg">
   <meta property="og:site_name" content="Robot Parts Co.">
-  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
-  <meta property="og:locale" content="en_Ca">
+  <meta property="og:description" content="A mega conglomerate corporation selling and sevicing all totalitarian robots.">
+  <meta property="og:locale" content="en_CA">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@robotpartsco">
+  <meta name="twitter:site" content="@robbotpartsco">
 </head>
 <body>
 
@@ -37,7 +34,7 @@
   </header>
 
   <main>
-    <h1>Products</h1>
+    <h1>Robot Parts</h1>
 
     <ul>
       <li>Gears</li>
