--- a/contact.html
+++ b/contact.html
@@ -2,46 +2,39 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Contact ・ Robot Parts Co.</title>
-  <meta name="discription" content="Every part or piexe a destructive robot needs: gears, rotors, mainpulators, sensors, power cells and more.">
+  <title>Contact · Robot Parts Co.</title>
+  <meta name="description" content="Send us digital beams or stop by the warehouse to order a part that we're missing.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-  <meta name="ICBM" content="45.41117,-75.69812">
-  <meta name="geo.position" content="45.41117,-75.69812">
+  <meta name="ICBM" content="45.41117;-75.69812">
+  <meta name="geo.position" content="45.41117;-75.69812">
   <meta name="geo.region" content="ca-on">
   <meta name="geo.placename" content="Ottawa">
-  <meta name="geo.placename" content="Ottawa">
-  <meta name="discription" content="Send us digital beams or stop by the wearhouse to order a part that we're missing">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-  <meta name="geo.placename" content="Ottawa">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Robot Parts Co. ・ Contact">
-  <meta property="og:url" content="https://robotparts.co/">
-  <meta property="og:image" content="https://robotparts.com/images/socail.jpg">
+  <meta property="og:title" content="Get in touch with us">
+  <meta property="og:url" content="https://robotparts.co/contact/">
+  <meta property="og:image" content="https://robotparts.co/images/social.jpg">
   <meta property="og:site_name" content="Robot Parts Co.">
-  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
-  <meta property="og:locale" content="en_Ca">
+  <meta property="og:description" content="A mega conglomerate corporation selling and sevicing all totalitarian robots.">
+  <meta property="og:locale" content="en_CA">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@robotpartsco">
+  <meta name="twitter:site" content="@robbotpartsco">
 </head>
 <body>
 
   <header>
-    <strong><img src="images/logo.svg" alt=""></strong>
+    <h1><img src="images/logo.svg" alt=""></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Products</a></li>
-        <li><a href="page3.html">Contact</a></li>
+        <li><a href="robot-parts.html">Products</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Contact</h1>
+    <h2>Contact</h2>
 
     <strong>Robot Parts Co.</strong>
 
@@ -57,17 +50,19 @@
   <footer>
     <p>© 2027 Robot Parts Co.</p>
   </footer>
+
   <script type="application/ld+json">
     {
-      "@contexr": "https://schema.org",
+      "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Robot Parts Co."
+      "name": "Robot Parts Co.",
       "email": "parts@robotparts.co",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "1234 Robot Lane",
         "addressLocality": "Robot Mega City 1",
-        "addressRegion": "RoboStateB",
+        "addressRegion": "RobotStateB",
+        "addressCountry": "RoboCountry211",
         "postalCode": "11001010100101001"
       }
     }
